[Modify] add buttons

--- a/Example/LYPopView/_scene/tab_normal/TabBaseViewController.xib
+++ b/Example/LYPopView/_scene/tab_normal/TabBaseViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -76,17 +76,30 @@
                         <action selector="showBasePopView:" destination="-1" eventType="touchUpInside" id="98p-9R-GXf"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="54v-T2-LFP">
+                    <rect key="frame" x="8" y="350" width="359" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="x7B-SQ-4EM"/>
+                    </constraints>
+                    <state key="normal" title="action pop"/>
+                    <connections>
+                        <action selector="actionPopTapped:" destination="-1" eventType="touchUpInside" id="RJe-B1-2Dn"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="gQX-5C-O6s" firstAttribute="top" secondItem="u4Z-kI-k5b" secondAttribute="bottom" constant="10" id="1Ur-VQ-B6U"/>
+                <constraint firstItem="54v-T2-LFP" firstAttribute="top" secondItem="cw2-0T-6EF" secondAttribute="bottom" constant="8" id="60d-hS-rZQ"/>
                 <constraint firstItem="7uc-gg-KHd" firstAttribute="top" secondItem="BR6-eG-xJw" secondAttribute="top" id="8wv-IU-hZm"/>
                 <constraint firstItem="xLn-TE-O5q" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="Alq-Wh-obD"/>
                 <constraint firstItem="7uc-gg-KHd" firstAttribute="leading" secondItem="BR6-eG-xJw" secondAttribute="trailing" constant="8" id="Dhl-bI-vUo"/>
                 <constraint firstAttribute="trailing" secondItem="u4Z-kI-k5b" secondAttribute="trailing" constant="10" id="GON-IG-tvE"/>
                 <constraint firstItem="BR6-eG-xJw" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="Ltq-y7-7OE"/>
+                <constraint firstAttribute="trailing" secondItem="54v-T2-LFP" secondAttribute="trailing" constant="8" id="Pkr-Pz-svU"/>
                 <constraint firstItem="cw2-0T-6EF" firstAttribute="top" secondItem="xLn-TE-O5q" secondAttribute="bottom" constant="8" id="Poo-cp-vqQ"/>
                 <constraint firstItem="7uc-gg-KHd" firstAttribute="width" secondItem="BR6-eG-xJw" secondAttribute="width" id="SCt-c7-VmX"/>
+                <constraint firstItem="54v-T2-LFP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="U7j-wf-bpY"/>
                 <constraint firstAttribute="trailing" secondItem="gQX-5C-O6s" secondAttribute="trailing" constant="10" id="XCE-AC-kJf"/>
                 <constraint firstItem="cw2-0T-6EF" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="XhA-tN-lpr"/>
                 <constraint firstItem="u4Z-kI-k5b" firstAttribute="top" secondItem="BR6-eG-xJw" secondAttribute="bottom" constant="10" id="Yv1-Gi-h6c"/>
